--- a/index.html
+++ b/index.html
@@ -7,36 +7,108 @@
     <script src="face-api.min.js" defer></script>
     <script src="./script.js" defer></script>
     <style>
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
       body {
         height: 100vh;
         display: flex;
-        justify-content: center;
+        flex-direction: column;
+        justify-content: space-between;
         align-items: center;
-        row-gap: 2.5rem;
-        flex-direction: column-reverse;
-        margin: 30px 0;
-        padding: 0;
+        background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+        font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+        padding: 20px;
       }
-      canvas {
-        position: absolute;
-        top: 0;
-        /* left: 0; */
+      body.loading {
+        opacity: 0.6;
+        pointer-events: none;
+      }
+
+      body.loading::after {
+        content: "Loading models...";
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        font-size: 1.5rem;
+        font-weight: bold;
+        color: #333;
+        z-index: 9999;
       }
       #container {
         position: relative;
         display: flex;
         justify-content: center;
-        /* width: 70%; */
+        align-items: center;
+        flex: 1;
+        width: 100%;
+        max-height: 80vh;
+        background: rgba(255, 255, 255, 0.1);
+        border-radius: 20px;
+        backdrop-filter: blur(10px);
+        box-shadow: 0 8px 32px rgba(0, 0, 0, 0.2);
+        overflow: hidden;
       }
-      #container img,
+      #container img {
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+      }
       #container canvas {
-        width: 60%;
-        margin: auto;
+        width: 90%;
+        height: auto;
+        max-height: 100%;
+        object-fit: contain;
+      }
+      canvas {
+        position: absolute;
+      }
+      input[type="file"] {
+        padding: 12px 24px;
+        background: white;
+        border: none;
+        border-radius: 10px;
+        cursor: pointer;
+        font-size: 16px;
+        font-weight: 600;
+        color: #667eea;
+        box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+        transition: transform 0.2s, box-shadow 0.2s;
+      }
+      input[type="file"]:hover {
+        transform: translateY(-2px);
+        box-shadow: 0 6px 20px rgba(0, 0, 0, 0.3);
       }
     </style>
   </head>
   <body>
-    <input type="file" id="imageUpload" />
     <div id="container"></div>
+    <label
+      for="imageUpload"
+      style="
+        padding: 12px 24px;
+        background: white;
+        border: none;
+        border-radius: 10px;
+        cursor: pointer;
+        font-size: 16px;
+        font-weight: 600;
+        color: #667eea;
+        box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+        transition: transform 0.2s, box-shadow 0.2s;
+        display: inline-block;
+      "
+    >
+      Upload Image
+    </label>
+    <input
+      type="file"
+      id="imageUpload"
+      accept="image/*"
+      style="display: none"
+    />
   </body>
 </html>
